Backend support for schemaless data types
